lex.go

//line lex.rl:1
package main

import (
	"fmt"
	"strconv"
	"unicode/utf8"
	
	//"github.com/cockroachdb/cockroach/pkg/sql/lex"
)

var _ = fmt.Println
var _ = strconv.Atoi

func lexSQL(data []byte) error {

	
//line lex.rl:17
	
//line lex.go:22
const scanner_start int = 12
const scanner_first_final int = 12
const scanner_error int = 0

const scanner_en_main int = 12


//line lex.rl:18

	cs, p, pe, eof := 0, 0, len(data), len(data)
	_ = eof

	var (
		mark int
		s string
		uval uint64
		err error
		isFconst bool
		isUpper bool
		isNotASCII bool
		numQuote int
		b []byte
	)
	str := func() { s = string(data[mark:p]) }
        _, _, _, _, _, _ = uval, err, isFconst, isUpper, isNotASCII, str

	
//line lex.go:50
	{
	cs = scanner_start
	}

//line lex.go:55
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 12:
		goto st_case_12
	case 0:
		goto st_case_0
	case 1:
		goto st_case_1
	case 13:
		goto st_case_13
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 14:
		goto st_case_14
	case 4:
		goto st_case_4
	case 15:
		goto st_case_15
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 16:
		goto st_case_16
	case 8:
		goto st_case_8
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 11:
		goto st_case_11
	case 22:
		goto st_case_22
	}
	goto st_out
tr33:
//line lex.rl:122

			if numQuote != 0 {
				b = make([]byte, p-mark-2-numQuote)
				// Now use numQuote as an index into b.
				numQuote = 0
				for i := mark+1; i < p-1; i++ {
					b[numQuote] = data[i]
					numQuote++
					if data[i] == '"' {
						i++
					}
				}
				s = string(b)
				numQuote = 0
			} else {
				b = data[mark+1:p-1]
			}
			if isNotASCII {
				if !utf8.Valid(b) {
					return fmt.Errorf("invalid UTF-8 string")
				}
				isNotASCII = false
			}
			emit(Ident, string(b))
		
	goto st12
tr45:
//line lex.rl:40

			mark++
			str()
			uval, err = strconv.ParseUint(s, 10, 64)
			if err != nil {
				return err
			}
			if err == nil && uval > 1<<63 {
				return fmt.Errorf("integer value out of range: %d", uval)
			}
			emit(Placeholder, s)
		
	goto st12
tr55:
//line lex.rl:156

			if numQuote != 0 {
				b = make([]byte, p-mark-2-numQuote)
				// Now use numQuote as an index into b.
				numQuote = 0
				for i := mark+1; i < p-1; i++ {
					b[numQuote] = data[i]
					numQuote++
					if data[i] == '\'' {
						i++
					}
				}
				s = string(b)
				numQuote = 0
			} else {
				b = data[mark+1:p-1]
			}
			if isNotASCII {
				if !utf8.Valid(b) {
					return fmt.Errorf("invalid UTF-8 string")
				}
				isNotASCII = false
			}
			emit(Sconst, string(b))
		
	goto st12
tr67:
//line lex.rl:52

			str()
			if isFconst {
				emit(Fconst, s)
			} else {
				emit(Iconst, s)
			}
			isFconst = false
		
	goto st12
tr79:
//line lex.rl:73

			if isNotASCII {
				str()
				//s = lex.NormalizeName(s)
			} else if isUpper {
				b := make([]byte, p-mark)
				for i, c := range data[mark:p] {
					if c >= 'A' && c <= 'Z' {
						c += 'a' - 'A'
					}
					b[i] = c
				}
				s = string(b)
			} else {
				str()
			}
			isUpper = false
			isNotASCII = false
			emit(Ident, s)
		
	goto st12
tr89:
//line lex.rl:69

			str()
			emit(Iconst, s)
		
	goto st12
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
//line lex.go:227
		switch data[p] {
		case 32:
			goto st12
		case 34:
			goto tr22
		case 36:
			goto tr23
		case 39:
			goto tr24
		case 43:
			goto tr25
		case 45:
			goto tr26
		case 46:
			goto tr27
		case 48:
			goto tr28
		case 95:
			goto tr31
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 9:
				if data[p] <= 8 {
					goto st0
				}
			case data[p] > 13:
				switch {
				case data[p] > 47:
					if 49 <= data[p] && data[p] <= 57 {
						goto tr29
					}
				case data[p] >= 14:
					goto st0
				}
			default:
				goto st12
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto tr30
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 127 {
						goto st0
					}
				case data[p] >= 97:
					goto tr31
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto tr32
st_case_0:
	st0:
		cs = 0
		goto _out
tr2:
//line lex.rl:102
 isNotASCII = true 
	goto st1
tr3:
//line lex.rl:116
 numQuote++ 
	goto st1
tr5:
//line lex.rl:116
 numQuote++ 
//line lex.rl:102
 isNotASCII = true 
	goto st1
tr22:
//line lex.rl:37
 mark = p 
	goto st1
tr46:
//line lex.rl:40

			mark++
			str()
			uval, err = strconv.ParseUint(s, 10, 64)
			if err != nil {
				return err
			}
			if err == nil && uval > 1<<63 {
				return fmt.Errorf("integer value out of range: %d", uval)
			}
			emit(Placeholder, s)
		
//line lex.rl:37
 mark = p 
	goto st1
tr56:
//line lex.rl:156

			if numQuote != 0 {
				b = make([]byte, p-mark-2-numQuote)
				// Now use numQuote as an index into b.
				numQuote = 0
				for i := mark+1; i < p-1; i++ {
					b[numQuote] = data[i]
					numQuote++
					if data[i] == '\'' {
						i++
					}
				}
				s = string(b)
				numQuote = 0
			} else {
				b = data[mark+1:p-1]
			}
			if isNotASCII {
				if !utf8.Valid(b) {
					return fmt.Errorf("invalid UTF-8 string")
				}
				isNotASCII = false
			}
			emit(Sconst, string(b))
		
//line lex.rl:37
 mark = p 
	goto st1
tr68:
//line lex.rl:52

			str()
			if isFconst {
				emit(Fconst, s)
			} else {
				emit(Iconst, s)
			}
			isFconst = false
		
//line lex.rl:37
 mark = p 
	goto st1
tr80:
//line lex.rl:73

			if isNotASCII {
				str()
				//s = lex.NormalizeName(s)
			} else if isUpper {
				b := make([]byte, p-mark)
				for i, c := range data[mark:p] {
					if c >= 'A' && c <= 'Z' {
						c += 'a' - 'A'
					}
					b[i] = c
				}
				s = string(b)
			} else {
				str()
			}
			isUpper = false
			isNotASCII = false
			emit(Ident, s)
		
//line lex.rl:37
 mark = p 
	goto st1
tr90:
//line lex.rl:69

			str()
			emit(Iconst, s)
		
//line lex.rl:37
 mark = p 
	goto st1
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
//line lex.go:411
		if data[p] == 34 {
			goto st13
		}
		if data[p] <= 127 {
			goto st1
		}
		goto tr2
tr4:
//line lex.rl:116
 numQuote++ 
	goto st13
	st13:
		if p++; p == pe {
			goto _test_eof13
		}
	st_case_13:
//line lex.go:428
		switch data[p] {
		case 32:
			goto tr33
		case 34:
			goto st2
		case 36:
			goto tr35
		case 39:
			goto tr36
		case 43:
			goto tr37
		case 45:
			goto tr38
		case 46:
			goto tr39
		case 48:
			goto tr40
		case 95:
			goto tr43
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 9:
				if data[p] <= 8 {
					goto st0
				}
			case data[p] > 13:
				switch {
				case data[p] > 47:
					if 49 <= data[p] && data[p] <= 57 {
						goto tr41
					}
				case data[p] >= 14:
					goto st0
				}
			default:
				goto tr33
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto tr42
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 127 {
						goto st0
					}
				case data[p] >= 97:
					goto tr43
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto tr44
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		if data[p] == 34 {
			goto tr4
		}
		if data[p] <= 127 {
			goto tr3
		}
		goto tr5
tr23:
//line lex.rl:37
 mark = p 
	goto st3
tr35:
//line lex.rl:122

			if numQuote != 0 {
				b = make([]byte, p-mark-2-numQuote)
				// Now use numQuote as an index into b.
				numQuote = 0
				for i := mark+1; i < p-1; i++ {
					b[numQuote] = data[i]
					numQuote++
					if data[i] == '"' {
						i++
					}
				}
				s = string(b)
				numQuote = 0
			} else {
				b = data[mark+1:p-1]
			}
			if isNotASCII {
				if !utf8.Valid(b) {
					return fmt.Errorf("invalid UTF-8 string")
				}
				isNotASCII = false
			}
			emit(Ident, string(b))
		
//line lex.rl:37
 mark = p 
	goto st3
tr47:
//line lex.rl:40

			mark++
			str()
			uval, err = strconv.ParseUint(s, 10, 64)
			if err != nil {
				return err
			}
			if err == nil && uval > 1<<63 {
				return fmt.Errorf("integer value out of range: %d", uval)
			}
			emit(Placeholder, s)
		
//line lex.rl:37
 mark = p 
	goto st3
tr57:
//line lex.rl:156

			if numQuote != 0 {
				b = make([]byte, p-mark-2-numQuote)
				// Now use numQuote as an index into b.
				numQuote = 0
				for i := mark+1; i < p-1; i++ {
					b[numQuote] = data[i]
					numQuote++
					if data[i] == '\'' {
						i++
					}
				}
				s = string(b)
				numQuote = 0
			} else {
				b = data[mark+1:p-1]
			}
			if isNotASCII {
				if !utf8.Valid(b) {
					return fmt.Errorf("invalid UTF-8 string")
				}
				isNotASCII = false
			}
			emit(Sconst, string(b))
		
//line lex.rl:37
 mark = p 
	goto st3
tr69:
//line lex.rl:52

			str()
			if isFconst {
				emit(Fconst, s)
			} else {
				emit(Iconst, s)
			}
			isFconst = false
		
//line lex.rl:37
 mark = p 
	goto st3
tr91:
//line lex.rl:69

			str()
			emit(Iconst, s)
		
//line lex.rl:37
 mark = p 
	goto st3
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
//line lex.go:611
		if 48 <= data[p] && data[p] <= 57 {
			goto st14
		}
		goto st0
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
		switch data[p] {
		case 32:
			goto tr45
		case 34:
			goto tr46
		case 36:
			goto tr47
		case 39:
			goto tr48
		case 43:
			goto tr49
		case 45:
			goto tr50
		case 46:
			goto tr51
		case 95:
			goto tr53
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 9:
				if data[p] <= 8 {
					goto st0
				}
			case data[p] > 13:
				switch {
				case data[p] > 47:
					if 48 <= data[p] && data[p] <= 57 {
						goto st14
					}
				case data[p] >= 14:
					goto st0
				}
			default:
				goto tr45
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto tr52
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 127 {
						goto st0
					}
				case data[p] >= 97:
					goto tr53
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto tr54
tr10:
//line lex.rl:102
 isNotASCII = true 
	goto st4
tr11:
//line lex.rl:150
 numQuote++ 
	goto st4
tr13:
//line lex.rl:150
 numQuote++ 
//line lex.rl:102
 isNotASCII = true 
	goto st4
tr24:
//line lex.rl:37
 mark = p 
	goto st4
tr36:
//line lex.rl:122

			if numQuote != 0 {
				b = make([]byte, p-mark-2-numQuote)
				// Now use numQuote as an index into b.
				numQuote = 0
				for i := mark+1; i < p-1; i++ {
					b[numQuote] = data[i]
					numQuote++
					if data[i] == '"' {
						i++
					}
				}
				s = string(b)
				numQuote = 0
			} else {
				b = data[mark+1:p-1]
			}
			if isNotASCII {
				if !utf8.Valid(b) {
					return fmt.Errorf("invalid UTF-8 string")
				}
				isNotASCII = false
			}
			emit(Ident, string(b))
		
//line lex.rl:37
 mark = p 
	goto st4
tr48:
//line lex.rl:40

			mark++
			str()
			uval, err = strconv.ParseUint(s, 10, 64)
			if err != nil {
				return err
			}
			if err == nil && uval > 1<<63 {
				return fmt.Errorf("integer value out of range: %d", uval)
			}
			emit(Placeholder, s)
		
//line lex.rl:37
 mark = p 
	goto st4
tr70:
//line lex.rl:52

			str()
			if isFconst {
				emit(Fconst, s)
			} else {
				emit(Iconst, s)
			}
			isFconst = false
		
//line lex.rl:37
 mark = p 
	goto st4
tr82:
//line lex.rl:73

			if isNotASCII {
				str()
				//s = lex.NormalizeName(s)
			} else if isUpper {
				b := make([]byte, p-mark)
				for i, c := range data[mark:p] {
					if c >= 'A' && c <= 'Z' {
						c += 'a' - 'A'
					}
					b[i] = c
				}
				s = string(b)
			} else {
				str()
			}
			isUpper = false
			isNotASCII = false
			emit(Ident, s)
		
//line lex.rl:37
 mark = p 
	goto st4
tr92:
//line lex.rl:69

			str()
			emit(Iconst, s)
		
//line lex.rl:37
 mark = p 
	goto st4
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
//line lex.go:798
		if data[p] == 39 {
			goto st15
		}
		if data[p] <= 127 {
			goto st4
		}
		goto tr10
tr12:
//line lex.rl:150
 numQuote++ 
	goto st15
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
//line lex.go:815
		switch data[p] {
		case 32:
			goto tr55
		case 34:
			goto tr56
		case 36:
			goto tr57
		case 39:
			goto st5
		case 43:
			goto tr59
		case 45:
			goto tr60
		case 46:
			goto tr61
		case 48:
			goto tr62
		case 95:
			goto tr65
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 9:
				if data[p] <= 8 {
					goto st0
				}
			case data[p] > 13:
				switch {
				case data[p] > 47:
					if 49 <= data[p] && data[p] <= 57 {
						goto tr63
					}
				case data[p] >= 14:
					goto st0
				}
			default:
				goto tr55
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto tr64
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 127 {
						goto st0
					}
				case data[p] >= 97:
					goto tr65
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto tr66
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
		if data[p] == 39 {
			goto tr12
		}
		if data[p] <= 127 {
			goto tr11
		}
		goto tr13
tr25:
//line lex.rl:37
 mark = p 
	goto st6
tr37:
//line lex.rl:122

			if numQuote != 0 {
				b = make([]byte, p-mark-2-numQuote)
				// Now use numQuote as an index into b.
				numQuote = 0
				for i := mark+1; i < p-1; i++ {
					b[numQuote] = data[i]
					numQuote++
					if data[i] == '"' {
						i++
					}
				}
				s = string(b)
				numQuote = 0
			} else {
				b = data[mark+1:p-1]
			}
			if isNotASCII {
				if !utf8.Valid(b) {
					return fmt.Errorf("invalid UTF-8 string")
				}
				isNotASCII = false
			}
			emit(Ident, string(b))
		
//line lex.rl:37
 mark = p 
	goto st6
tr49:
//line lex.rl:40

			mark++
			str()
			uval, err = strconv.ParseUint(s, 10, 64)
			if err != nil {
				return err
			}
			if err == nil && uval > 1<<63 {
				return fmt.Errorf("integer value out of range: %d", uval)
			}
			emit(Placeholder, s)
		
//line lex.rl:37
 mark = p 
	goto st6
tr59:
//line lex.rl:156

			if numQuote != 0 {
				b = make([]byte, p-mark-2-numQuote)
				// Now use numQuote as an index into b.
				numQuote = 0
				for i := mark+1; i < p-1; i++ {
					b[numQuote] = data[i]
					numQuote++
					if data[i] == '\'' {
						i++
					}
				}
				s = string(b)
				numQuote = 0
			} else {
				b = data[mark+1:p-1]
			}
			if isNotASCII {
				if !utf8.Valid(b) {
					return fmt.Errorf("invalid UTF-8 string")
				}
				isNotASCII = false
			}
			emit(Sconst, string(b))
		
//line lex.rl:37
 mark = p 
	goto st6
tr71:
//line lex.rl:52

			str()
			if isFconst {
				emit(Fconst, s)
			} else {
				emit(Iconst, s)
			}
			isFconst = false
		
//line lex.rl:37
 mark = p 
	goto st6
tr83:
//line lex.rl:73

			if isNotASCII {
				str()
				//s = lex.NormalizeName(s)
			} else if isUpper {
				b := make([]byte, p-mark)
				for i, c := range data[mark:p] {
					if c >= 'A' && c <= 'Z' {
						c += 'a' - 'A'
					}
					b[i] = c
				}
				s = string(b)
			} else {
				str()
			}
			isUpper = false
			isNotASCII = false
			emit(Ident, s)
		
//line lex.rl:37
 mark = p 
	goto st6
tr93:
//line lex.rl:69

			str()
			emit(Iconst, s)
		
//line lex.rl:37
 mark = p 
	goto st6
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
//line lex.go:1023
		if data[p] == 46 {
			goto tr14
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr15
		}
		goto st0
tr14:
//line lex.rl:66

			isFconst = true
		
	goto st7
tr27:
//line lex.rl:37
 mark = p 
//line lex.rl:66

			isFconst = true
		
	goto st7
tr39:
//line lex.rl:122

			if numQuote != 0 {
				b = make([]byte, p-mark-2-numQuote)
				// Now use numQuote as an index into b.
				numQuote = 0
				for i := mark+1; i < p-1; i++ {
					b[numQuote] = data[i]
					numQuote++
					if data[i] == '"' {
						i++
					}
				}
				s = string(b)
				numQuote = 0
			} else {
				b = data[mark+1:p-1]
			}
			if isNotASCII {
				if !utf8.Valid(b) {
					return fmt.Errorf("invalid UTF-8 string")
				}
				isNotASCII = false
			}
			emit(Ident, string(b))
		
//line lex.rl:37
 mark = p 
//line lex.rl:66

			isFconst = true
		
	goto st7
tr51:
//line lex.rl:40

			mark++
			str()
			uval, err = strconv.ParseUint(s, 10, 64)
			if err != nil {
				return err
			}
			if err == nil && uval > 1<<63 {
				return fmt.Errorf("integer value out of range: %d", uval)
			}
			emit(Placeholder, s)
		
//line lex.rl:37
 mark = p 
//line lex.rl:66

			isFconst = true
		
	goto st7
tr61:
//line lex.rl:156

			if numQuote != 0 {
				b = make([]byte, p-mark-2-numQuote)
				// Now use numQuote as an index into b.
				numQuote = 0
				for i := mark+1; i < p-1; i++ {
					b[numQuote] = data[i]
					numQuote++
					if data[i] == '\'' {
						i++
					}
				}
				s = string(b)
				numQuote = 0
			} else {
				b = data[mark+1:p-1]
			}
			if isNotASCII {
				if !utf8.Valid(b) {
					return fmt.Errorf("invalid UTF-8 string")
				}
				isNotASCII = false
			}
			emit(Sconst, string(b))
		
//line lex.rl:37
 mark = p 
//line lex.rl:66

			isFconst = true
		
	goto st7
tr73:
//line lex.rl:52

			str()
			if isFconst {
				emit(Fconst, s)
			} else {
				emit(Iconst, s)
			}
			isFconst = false
		
//line lex.rl:37
 mark = p 
//line lex.rl:66

			isFconst = true
		
	goto st7
tr85:
//line lex.rl:73

			if isNotASCII {
				str()
				//s = lex.NormalizeName(s)
			} else if isUpper {
				b := make([]byte, p-mark)
				for i, c := range data[mark:p] {
					if c >= 'A' && c <= 'Z' {
						c += 'a' - 'A'
					}
					b[i] = c
				}
				s = string(b)
			} else {
				str()
			}
			isUpper = false
			isNotASCII = false
			emit(Ident, s)
		
//line lex.rl:37
 mark = p 
//line lex.rl:66

			isFconst = true
		
	goto st7
tr95:
//line lex.rl:69

			str()
			emit(Iconst, s)
		
//line lex.rl:37
 mark = p 
//line lex.rl:66

			isFconst = true
		
	goto st7
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
//line lex.go:1199
		if 48 <= data[p] && data[p] <= 57 {
			goto st16
		}
		goto st0
tr78:
//line lex.rl:66

			isFconst = true
		
	goto st16
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
//line lex.go:1215
		switch data[p] {
		case 32:
			goto tr67
		case 34:
			goto tr68
		case 36:
			goto tr69
		case 39:
			goto tr70
		case 43:
			goto tr71
		case 45:
			goto tr72
		case 46:
			goto tr73
		case 69:
			goto tr75
		case 95:
			goto tr76
		case 101:
			goto tr75
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 9:
				if data[p] <= 8 {
					goto st0
				}
			case data[p] > 13:
				switch {
				case data[p] > 47:
					if 48 <= data[p] && data[p] <= 57 {
						goto st16
					}
				case data[p] >= 14:
					goto st0
				}
			default:
				goto tr67
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto tr74
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 127 {
						goto st0
					}
				case data[p] >= 97:
					goto tr76
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto tr77
tr26:
//line lex.rl:37
 mark = p 
	goto st8
tr38:
//line lex.rl:122

			if numQuote != 0 {
				b = make([]byte, p-mark-2-numQuote)
				// Now use numQuote as an index into b.
				numQuote = 0
				for i := mark+1; i < p-1; i++ {
					b[numQuote] = data[i]
					numQuote++
					if data[i] == '"' {
						i++
					}
				}
				s = string(b)
				numQuote = 0
			} else {
				b = data[mark+1:p-1]
			}
			if isNotASCII {
				if !utf8.Valid(b) {
					return fmt.Errorf("invalid UTF-8 string")
				}
				isNotASCII = false
			}
			emit(Ident, string(b))
		
//line lex.rl:37
 mark = p 
	goto st8
tr50:
//line lex.rl:40

			mark++
			str()
			uval, err = strconv.ParseUint(s, 10, 64)
			if err != nil {
				return err
			}
			if err == nil && uval > 1<<63 {
				return fmt.Errorf("integer value out of range: %d", uval)
			}
			emit(Placeholder, s)
		
//line lex.rl:37
 mark = p 
	goto st8
tr60:
//line lex.rl:156

			if numQuote != 0 {
				b = make([]byte, p-mark-2-numQuote)
				// Now use numQuote as an index into b.
				numQuote = 0
				for i := mark+1; i < p-1; i++ {
					b[numQuote] = data[i]
					numQuote++
					if data[i] == '\'' {
						i++
					}
				}
				s = string(b)
				numQuote = 0
			} else {
				b = data[mark+1:p-1]
			}
			if isNotASCII {
				if !utf8.Valid(b) {
					return fmt.Errorf("invalid UTF-8 string")
				}
				isNotASCII = false
			}
			emit(Sconst, string(b))
		
//line lex.rl:37
 mark = p 
	goto st8
tr72:
//line lex.rl:52

			str()
			if isFconst {
				emit(Fconst, s)
			} else {
				emit(Iconst, s)
			}
			isFconst = false
		
//line lex.rl:37
 mark = p 
	goto st8
tr84:
//line lex.rl:73
